--- a/bio-kep-umm.html
+++ b/bio-kep-umm.html
@@ -209,7 +209,7 @@
                   >
                 </li>
                 <li class="breadcrumb-item active" style="color: black">
-                  Kepala Desa
+                  Kepala Urusan Umum
                 </li>
               </ol>
             </nav>
@@ -217,92 +217,62 @@
         </div>
       </div>
     </section>
-    <section id="Stuktur" class="stuktur-desa mb-100 py-5">
-      <div class="row">
-        <div class="col-md-3">
-          <ul class="nav nav-list flex-column mb-5">
-            <li class="nav-item">
-              <a class="nav-link" href="stuktur.html">Struktur Organisasi</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="detail-kepala.html">Kepala Desa </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="detail-sekre.html">Sekretaris Desa </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="detail-sek-pem.html"
-                >Kepala Seksi Pemerintahan
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="detail-sek-kese.html"
-                >Kepala Seksi Kesejahteraan
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="detail-sek-pel.html"
-                >Kepala Seksi Pelayanan
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="detail-kep-umm.html"
-                >Kepala urusan Umum
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="detail.kep.keu.html"
-                >Kepala Urusan Keuangan
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-9">
-          <h3 class="text-primary text-dark">
-            <strong>Struktur Organisasi</strong>
-          </h3>
+    <section id="biodata">
+      <div class="main mb-xlg">
+        <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <table class="table -table-striped">
-                <tbody>
-                  <tr>
-                    <th width="15%" nowrap class="b-none">Jabatan</th>
-                    <td width="1px" class="b-none">:</td>
-                    <td class="b-none">KEPALA DESA</td>
-                  </tr>
-                  <tr>
-                    <th width="15%" nowrap>Nama Pejabat</th>
-                    <td width="1px">:</td>
-                    <td>
-                      <a
-                        href="bio-kepdes.html"
-                        class="btn btn-sm btn-default btn-light pull-right"
-                      >
-                        Detail Pegawai <i class="fa fa-share"></i>
-                      </a>
-                      Dedi Rachmat
-                    </td>
-                  </tr>
-                  <tr>
-                    <th width="15%" nowrap>NIP</th>
-                    <td width="1px">:</td>
-                    <td>
-                      <small>--</small>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-              <blockquote>
-                <p>NAMA : Dedi Rachmat</p>
-                <p>TTL :&nbsp;Balikpapan 13 Maret 1981</p>
-                <p>AGAMA : Islam</p>
-              </blockquote>
+              <div class="row">
+                <div class="col-md-9">
+                  <h3 class="text-primary">
+                    <strong>Nurhayati</strong>
+                  </h3>
+                  <div class="row">
+                    <div class="col-md-3">
+                      <img src="img/kpl-umum.jpg" class="img-thumbnail" />
+                      <br />
+                      <br />
+                    </div>
+                    <div class="col-md-9">
+                      <div class="panel panel-default">
+                        <table class="table">
+                          <tbody>
+                            <tr>
+                              <th width="15%" nowrap>Nama</th>
+                              <td width="1px">:</td>
+                              <td>Nurhayati</td>
+                            </tr>
+                            <tr>
+                              <th nowrap>Jabatan</th>
+                              <td width="1px">:</td>
+                              <td>Kepala Urusan Umum</td>
+                            </tr>
+                            <tr>
+                              <th nowrap>NIP</th>
+                              <td width="1px">:</td>
+                              <td>-</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                        <div class="panel-body">
+                          <p></p>
+                          <p>NAMA : Nurhayati</p>
+                          <p>TTL : Kaliorang, 15 November 1999</p>
+                          <p>AGAMA : ISLAM</p>
+                          <p>ALAMAT : JL. Melati RT 02/ RW 01</p>
+                          <p>JENIS KELAMIN : PEREMPUAN</p>
+                          <p>KEWARGANEGARAAN : WNI</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- BEGIN PRE-FOOTER -->
     <footer class="footer-akhir p-3">
       <div class="container">
         <div class="row p-5">
